--- a/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/buzonNotificaciones/index.xhtml
@@ -29,7 +29,7 @@
                             <i class="fa fa-file-image-o Fs25"></i>
                             <i class="fa fa-file-audio-o Fs25"></i>
                         </div> -->
-                        <div class="EmptyBox20"></div>
+                        <div class<p:dataScroller value=="EmptyBox20"></div>
                     </p:panel>
                 </p:dataScroller>
             </h:form>
