--- a/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalConsultas/gestionConsultas/ver.xhtml
@@ -22,19 +22,19 @@
                     <ui:include src="ayuda/ver.xhtml"></ui:include>
                 </p:dialog>
                 
-                <p:outputLabel value="Tema: #{formatoPantallas.campo100}" class="h2" ></p:outputLabel>
+                <p:outputLabel value="Tema: #{gestionarConsultasController.consultaModifica.tdTema}" class="h2" ></p:outputLabel>
                     <p:separator></p:separator>
                     <div class="EmptyBox20"></div>
                     <div class="Container20">
                         <i class="icon-round58 Fs40"></i>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
+                        <p:outputLabel value="Usuario: #{gestionarConsultasController.consultaModifica.alumno.alUsuario} ,#{gestionarConsultasController.consultaModifica.fechaFiltrable}"></p:outputLabel>
                     </div>
                     <div class="Container73">
                         <p:outputLabel value="Consulta" class="Container100">
                         </p:outputLabel>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
+                        <p:outputLabel value="#{gestionarConsultasController.consultaModifica.tdConsulta}"></p:outputLabel>
                         <div class="EmptyBox20"></div>
                         <div class="Container73" style="cursor: pointer" >
                             <i class="fa fa-file-movie-o Fs25"></i>
@@ -45,16 +45,18 @@
                     <div class="EmptyBox10"></div>
                     <p:separator></p:separator>
                     <div class="EmptyBox20"></div>
-                    <div class="Container20">
+                    <p:dataScroller value="#{gestionarConsultasController.consultaModifica.sieniResolDudaList}"  var="cs" >
+                       
+                        <div class="Container20">
                         <i class="icon-round58 Fs40"></i>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
+                        <p:outputLabel value="Usuario: #{cs.idResolDuda} ,#{cs.fechaFiltrable}"></p:outputLabel>
                     </div>
                     <div class="Container73">
                         <p:outputLabel value="Respuesta" class="Container100">
                         </p:outputLabel>
                         <div class="EmptyBox20"></div>
-                        <p:outputLabel value="#{formatoPantallas.campo4000}"></p:outputLabel>
+                        <p:outputLabel value="#{cs.rdMensaje}"></p:outputLabel>
                         <div class="EmptyBox20"></div>
                         <div class="Container73" style="cursor: pointer" >
                             <i class="fa fa-file-movie-o Fs25"></i>
@@ -63,24 +65,8 @@
                         </div>
                     </div>
                     <div class="EmptyBox10"></div>
-                    <p:separator></p:separator>
-                    <div class="Container20">
-                        <i class="icon-round58 Fs40"></i>
-                        <div class="EmptyBox20"></div>
-                        <p:outputLabel value="Usuario: #{formatoPantallas.campo30} ,#{formatoPantallas.fechaHora}"></p:outputLabel>
-                    </div>
-                    <div class="Container73">
-                        <p:editor></p:editor>
-                    </div>
-                    <div class="EmptyBox10"></div>
-                    <p:outputLabel value="Tipo de Archivo:"></p:outputLabel>
-                    <p:selectOneMenu>
-                        <f:selectItem itemValue="-1" itemLabel="#{formatoPantallas.campo15}"></f:selectItem>
-                        <f:selectItem itemValue="0" itemLabel="Audio"></f:selectItem>
-                        <f:selectItem itemValue="1" itemLabel="Video"></f:selectItem>
-                        <f:selectItem itemValue="2" itemLabel="Imagen"></f:selectItem>
-                    </p:selectOneMenu>
-                    <div class="EmptyBox10"></div>
+                    </p:dataScroller>
+                    
                     <p:outputLabel value="Archivo"></p:outputLabel>
                     <div class="EmptyBox20"></div>
                     <p:fileUpload label="Buscar" cancelLabel="cancelar" uploadLabel="Subir archivo" multiple="false" mode="advanced" skinSimple="true" allowTypes="/(\.|\/)(jpg)$/" class="Container40 Responsive" value="#{archivosMultimediaForm.archivo}" >
