--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
@@ -33,10 +33,10 @@
                 <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
                 
                 <p:dataTable id="consulta" paginatorPosition="bottom" var="noti" value="#{gestionarNoticiasController.noticiasList}" 
-                             paginator="true" rows="10" emptyMessage="No hay noticias que mostrar"
+                             paginator="true" rows="10" 
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
-                             emptyMessage="No se encontraron datos"
+                             emptyMessage="No hay noticias que mostrar"
                              reflow="true">
                         <p:column headerText="Usuario" filterBy="#{noti.ncPublica}" filterable="true" filterMatchMode="contains">
                             #{noti.ncPublica}
