--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/grados/index.xhtml
@@ -34,6 +34,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{catGradoController.listDatosFiltered}"
                              reflow="true">
                     <p:column headerText="Nombre" filterBy="#{car.grNombre}" filterable="true" filterMatchMode="contains">
                         #{car.grNombre}
