--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/catalogos/tipoElemPlantilla/index.xhtml
@@ -34,6 +34,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{catTipoElementoPlantillaController.listDatosFiltered}"
                              reflow="true">
                     <p:column headerText="Nombre" filterBy="#{car.teDescripcion}" filterable="true" filterMatchMode="contains">
                         #{car.teDescripcion}
