--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionCompInteract/index.xhtml
@@ -32,6 +32,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{gestionComponentesInteractivosController.listDatosFiltered}"
                              reflow="true"
                              >
                     <p:column headerText="Nombre" filterBy="#{car.scNombre}" filterMatchMode="contains">
