--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionPlantillas/index.xhtml
@@ -33,6 +33,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{gestionPlantillasController.listDatosFiltered}"
                              reflow="true"
                              >
                     <p:column headerText="Nombre" filterBy="#{car.plNombre}" filterMatchMode="contains">
