--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
@@ -39,6 +39,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{gestionarAlumnosController.listDatosFiltered}"
                              reflow="true">
                     <p:column headerText="Carnet" style="width:8%" filterBy="#{car.alCarnet}" filterMatchMode="contains" filterable="true">
                         #{car.alCarnet}
