--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/claseOnline/index.xhtml
@@ -27,6 +27,7 @@
                              paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{gestionClasesOnlineController.listDatosFiltered}"
                              reflow="true"
                              >
                     <p:column headerText="Materia"  filterBy="#{car.idCurso.idMateria.maNombre}" filterMatchMode="contains" filterable="true">
