--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionClase/programacionClase/index.xhtml
@@ -32,6 +32,7 @@
                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                          rowsPerPageTemplate="10,20,40"
                          emptyMessage="No se encontraron datos"
+                         filteredValue="#{programacionClasesController.listDatosFiltered}"
                          reflow="true"
                          >
                 <p:column headerText="Curso" filterBy="#{car.idCurso.crNombre}" filterable="true" filterMatchMode="contains">
