--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionEvaluaciones/index.xhtml
@@ -40,6 +40,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No se encontraron datos"
+                             filteredValue="#{gestionarEvaluacionController.listDatosFiltered}"
                              reflow="true">
                     <p:column headerText="Título" style="width: 30%" filterBy="#{car.evNombre}" filterable="true" filterMatchMode="contains">
                         #{car.evNombre}
