--- a/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/portalNoticias/gestionNoticias/index.xhtml
@@ -37,6 +37,7 @@
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                              rowsPerPageTemplate="10,20,40"
                              emptyMessage="No hay noticias que mostrar"
+                             filteredValue="#{gestionarNoticiasController.listDatosFiltered}"
                              reflow="true">
                         <p:column headerText="Usuario" filterBy="#{noti.ncPublica}" filterable="true" filterMatchMode="contains">
                             #{noti.ncPublica}
