--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/inscritos.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/gestionCurso/inscritos.xhtml
@@ -35,6 +35,7 @@
                 <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionCursoController.alumnoInscritoList}" 
                              paginator="true" rows="10"
                              paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             emptyMessage="No se encontraron datos"
                              rowsPerPageTemplate="10,20,40"
                              reflow="true">
                     <p:column headerText="Nombre" filterBy="#{car.alNombreCompleto}" filterable="true" filterMatchMode="contains">
