--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/boletaNota/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/boletaNota/index.xhtml
@@ -76,7 +76,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptBoletaNotasController.GenerarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptBoletaNotasController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptBoletaNotasController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
