--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
@@ -54,7 +54,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptDocentesController.GenerarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptDocentesController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptDocentesController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
