--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteNotasAlumnoAnioEscolar/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteNotasAlumnoAnioEscolar/index.xhtml
@@ -80,7 +80,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptNotasController.GenerarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptNotasController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptNotasController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
