--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteUsuarios/index.xhtml
@@ -68,7 +68,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptUsuariosController.GenerarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptUsuariosController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptUsuariosController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
