correccion de bug mnto usuarios

--- a/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/administracionSistema/gestionUsuarios/index.xhtml
@@ -58,7 +58,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Adicionar Usuario" action="#{mntoUsuariosController.crear()}"></p:commandButton>
+                <p:commandButton value="Adicionar Usuario" action="#{mntoUsuariosController.initNuevo()}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{mntoUsuariosController.refresh()}"></p:commandButton>
             </h:form>
             <div class="EmptyBox5"></div>
